# tapo-camera-machine-learning

./: .env.template  .gitignore  README.md  app.py  camera.py  docker-compose.yml  image_processor.py  pyproject.toml  st_app.py  st_gui.py  test_cam.py
backend/: .gitignore  Dockerfile  pyproject.toml
backend/src/: app.py  config.py
backend/src/camera/: frame.py  my_camera.py
backend/src/image_processor/: emotion.py  mesh_points.py
event/: .env.template  Dockerfile  pyproject.toml
event/src/: event_server.py
frontend/: .env.template  Dockerfile  app.py  pyproject.toml
frontend/src/: app.py
src/: app.py  camera.py  frame.py  move.py
src/camera/: frame.py  move.py
src/image_processor/: emotion.py  mesh_points.py  object_detection.py
