[project]
name = "tapo-cam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.0.0",
    "mediapipe>=0.10.14",
    "onvif-zeep>=0.2.12",
    "opencv-contrib-python>=4.12.0.88",
    "opencv-python>=4.12.0.88",
    "rtsp>=1.1.12",
    "ruff>=0.13.0",
    "streamlit>=1.49.1",
    "uvicorn>=0.35.0",
]
